log/build_2026-04-01_18-01-23/turtle_spiral/stdout_stderr.log
running egg_info
writing ../../build/turtle_spiral/turtle_spiral.egg-info/PKG-INFO
writing dependency_links to ../../build/turtle_spiral/turtle_spiral.egg-info/dependency_links.txt
writing entry points to ../../build/turtle_spiral/turtle_spiral.egg-info/entry_points.txt
writing requirements to ../../build/turtle_spiral/turtle_spiral.egg-info/requires.txt
writing top-level names to ../../build/turtle_spiral/turtle_spiral.egg-info/top_level.txt
reading manifest file '../../build/turtle_spiral/turtle_spiral.egg-info/SOURCES.txt'
writing manifest file '../../build/turtle_spiral/turtle_spiral.egg-info/SOURCES.txt'
running build
running build_py
copying turtle_spiral/turtle_spiral.py -> /home/tejasarjuna/Learning_phase/build/turtle_spiral/build/lib/turtle_spiral
running install
running install_lib
copying /home/tejasarjuna/Learning_phase/build/turtle_spiral/build/lib/turtle_spiral/turtle_spiral.py -> /home/tejasarjuna/Learning_phase/install/turtle_spiral/lib/python3.10/site-packages/turtle_spiral
byte-compiling /home/tejasarjuna/Learning_phase/install/turtle_spiral/lib/python3.10/site-packages/turtle_spiral/turtle_spiral.py to turtle_spiral.cpython-310.pyc
  File "/home/tejasarjuna/Learning_phase/install/turtle_spiral/lib/python3.10/site-packages/turtle_spiral/turtle_spiral.py", line 2
    from rclpy.node Node
                    ^^^^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/tejasarjuna/Learning_phase/install/turtle_spiral/lib/python3.10/site-packages/turtle_spiral-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/turtle_spiral/turtle_spiral.egg-info to /home/tejasarjuna/Learning_phase/install/turtle_spiral/lib/python3.10/site-packages/turtle_spiral-0.0.0-py3.10.egg-info
running install_scripts
Installing turtle_spiral script to /home/tejasarjuna/Learning_phase/install/turtle_spiral/lib/turtle_spiral
writing list of installed files to '/home/tejasarjuna/Learning_phase/build/turtle_spiral/install.log'
